# EditID3

./: .gitignore  CMakeLists.txt  EditID3.sln  LICENSE_EDITID3.txt  README.md
EditID3/: EditID3.cpp  EditID3.h  EditID3.vcxproj  EditID3.vcxproj.filters  TypeClasses.cpp  frame.cpp  header.cpp  id3v2lib.cpp  id3v2lib.hpp  pch.h  types.cpp  utils.cpp
EditID3/id3v2lib/: TypeClasses.hpp  constants.hpp  frame.hpp  header.hpp  types.hpp  utils.hpp
